now its work correctly on tablet

--- a/site/module 2 solution/style.css
+++ b/site/module 2 solution/style.css
@@ -100,7 +100,7 @@
     }
     .box-3{
       margin-top: 30px;
-      width: 90%;
+      width: 87%;
     }
   }
 
